Corrections after review

--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -108,7 +108,7 @@
     "n_students = len(student_data)\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = len(student_data.columns)\n",
+    "n_features = len(student_data.columns[:-1])\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = len(student_data[student_data[\"passed\"] == \"yes\"])\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -352,8 +352,8 @@
     "**SVM**\n",
     "\n",
     "- *Real world application*: Optical character recognition (reference: http://ieeexplore.ieee.org/document/991021/)  \n",
-    "- *Strengths*: It works well even with many features on the data, and is unlikely to overfit. Outliers have little effect, meaning it can stand up quite well to noisy data.\n",
-    "- *Weaknesses*: As it works in a ’black box’ way, it's very difficult to understand why any particular prediction was made. It also needs good choices for the hyper parameters to get good results, and can be slow on large datasets.\n",
+    "- *Strengths*: It works well even with many features on the dataset, with small datasets and is unlikely to overfit. Outliers have little effect, meaning it can stand up quite well to noisy data.\n",
+    "- *Weaknesses*: As it works in a ’black box’ way, it's very difficult to understand why any particular prediction was made. It also needs good choices for the hyper parameters to get good results, and can be slow to train on large datasets.\n",
     "- *What makes it a good candidate*:  It can model complex relationships between the 30+ features accurately without overfitting, without a need for feature selection. Our dataset is small, so performance won't be a problem.\n",
     "\n",
     "**K-Nearest Neighbor**\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -450,63 +450,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "GaussianNB: \n",
+      "\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
-      "Trained model in 0.0021 seconds\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for training set: 0.8293.\n",
+      "Trained model in 0.0011 seconds\n",
       "Made predictions in 0.0003 seconds.\n",
+      "F1 score for training set: 0.8293.\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for test set: 0.7031.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0011 seconds\n",
+      "Trained model in 0.0007 seconds\n",
       "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.7529.\n",
       "Made predictions in 0.0003 seconds.\n",
       "F1 score for test set: 0.6885.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0010 seconds\n",
+      "Trained model in 0.0009 seconds\n",
       "Made predictions in 0.0004 seconds.\n",
       "F1 score for training set: 0.7882.\n",
-      "Made predictions in 0.0003 seconds.\n",
+      "Made predictions in 0.0005 seconds.\n",
       "F1 score for test set: 0.7538.\n",
       "\n",
+      "SVC: \n",
       "\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0014 seconds\n",
-      "Made predictions in 0.0008 seconds.\n",
+      "Trained model in 0.0016 seconds\n",
+      "Made predictions in 0.0011 seconds.\n",
       "F1 score for training set: 0.8633.\n",
       "Made predictions in 0.0008 seconds.\n",
       "F1 score for test set: 0.8058.\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0036 seconds\n",
-      "Made predictions in 0.0023 seconds.\n",
+      "Trained model in 0.0038 seconds\n",
+      "Made predictions in 0.0026 seconds.\n",
       "F1 score for training set: 0.8581.\n",
-      "Made predictions in 0.0012 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "F1 score for test set: 0.8400.\n",
       "Training a SVC using a training set size of 300. . .\n",
-      "Trained model in 0.0071 seconds\n",
-      "Made predictions in 0.0076 seconds.\n",
+      "Trained model in 0.0073 seconds\n",
+      "Made predictions in 0.0050 seconds.\n",
       "F1 score for training set: 0.8571.\n",
-      "Made predictions in 0.0021 seconds.\n",
+      "Made predictions in 0.0018 seconds.\n",
       "F1 score for test set: 0.8108.\n",
       "\n",
+      "KNeighborsClassifier: \n",
       "\n",
       "Training a KNeighborsClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0005 seconds\n",
       "Made predictions in 0.0012 seconds.\n",
       "F1 score for training set: 0.7538.\n",
-      "Made predictions in 0.0011 seconds.\n",
+      "Made predictions in 0.0010 seconds.\n",
       "F1 score for test set: 0.7317.\n",
       "Training a KNeighborsClassifier using a training set size of 200. . .\n",
       "Trained model in 0.0005 seconds\n",
-      "Made predictions in 0.0025 seconds.\n",
+      "Made predictions in 0.0030 seconds.\n",
       "F1 score for training set: 0.8288.\n",
-      "Made predictions in 0.0013 seconds.\n",
+      "Made predictions in 0.0014 seconds.\n",
       "F1 score for test set: 0.8000.\n",
       "Training a KNeighborsClassifier using a training set size of 300. . .\n",
-      "Trained model in 0.0008 seconds\n",
-      "Made predictions in 0.0078 seconds.\n",
+      "Trained model in 0.0007 seconds\n",
+      "Made predictions in 0.0057 seconds.\n",
       "F1 score for training set: 0.8486.\n",
-      "Made predictions in 0.0021 seconds.\n",
+      "Made predictions in 0.0022 seconds.\n",
       "F1 score for test set: 0.8028.\n"
      ]
     }
@@ -519,7 +524,7 @@
     "\n",
     "# TODO: Initialize the three models\n",
     "clf_A = GaussianNB()\n",
-    "clf_B = SVC()\n",
+    "clf_B = SVC(random_state=123)\n",
     "clf_C = KNeighborsClassifier()\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
@@ -533,17 +538,11 @@
     "y_train_300 = y_train[:300]\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
-    "print \"\\n\"\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
-    "print \"\\n\"\n",
-    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)\n"
+    "# loop thru models, then thru train sizes\n",
+    "for clf in [clf_A, clf_B, clf_C]:\n",
+    "    print \"\\n{}: \\n\".format(clf.__class__.__name__)\n",
+    "    for n in [100, 200, 300]:\n",
+    "        train_predict(clf, X_train[:n], y_train[:n], X_test, y_test)"
    ]
   },
   {
@@ -620,9 +619,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** This SVM model works by laying out the student data in multiple dimensions, based on the different attributes of each student's data. It then tries to find a line (even a multidimensional line) that separates the students, such that all the 'passed' students are on one side of the line and the 'failed' on the other. There may be many possible such lines, so we try to find the one that's as far away as possible from either side. This helps make it more reliable, particularly when making predictions for students who fall close to the line. This process of finding the best line is how the model is trained from the data. To make a prediction for a new student, we can simply see whether their data point falls on the 'passed' or 'failed' side of the line.  \n",
+    "**Answer: ** This SVM model works by laying out the student data in multiple dimensions, based on the different attributes of each student's data. It then tries to find a line (even a multidimensional line) that separates the students, such that all the 'passed' students are on one side of the line and the 'failed' on the other. There may be many possible such lines, so we try to find the one that's as far away as possible from either side. This helps make it more reliable, particularly when making predictions for students who fall close to the line. \n",
     "\n",
-    "The student data will always have some randomness to it, where the actual outcome for one particular student is not what could be expected most of the time in similar conditions. In such situations, we may get better results by configuring the model to accept the occasional incorrect classification, in order to get a more accurate, generalized line overall. The accuracy of our overall results is affected by to what exact extent we make this trade-off."
+    "This image shows an example of how SVM works, with the separating line (hyperplane) being the one with the maximum distance between the differently classified data points.\n",
+    "\n",
+    "![SVM](https://udacity-github-sync-content.s3.amazonaws.com/_imgs/19273/1468014011/optimal-hyperplane.png)\n",
+    "\n",
+    "This process of finding the best line is how the model is trained from the data. To make a prediction for a new student, we can simply see whether their data point falls on the 'passed' or 'failed' side of the line. \n",
+    "\n",
+    "However the student data will likely always have some randomness to it, where the actual outcome for one particular student is not what could be expected most of the time in similar conditions. In such situations, we may get better results by configuring the model to accept the occasional incorrect classification, in order to get a more accurate, generalized line overall. The accuracy of our overall results is affected by to what exact extent we make this trade-off."
    ]
   },
   {
@@ -643,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -652,9 +657,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0042 seconds.\n",
+      "SVC(C=1, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape=None, degree=3, gamma=0.0001, kernel='rbf',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False)\n",
+      "Made predictions in 0.0047 seconds.\n",
       "Tuned model has a training F1 score of 0.8024.\n",
-      "Made predictions in 0.0015 seconds.\n",
+      "Made predictions in 0.0017 seconds.\n",
       "Tuned model has a testing F1 score of 0.8050.\n"
      ]
     }
@@ -683,6 +692,7 @@
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
+    "print clf\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
     "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
